Refactor logging in ApiGatewayVerticle and Main to use SLF4J directly; enhance LoggingUtil for better log level handling